--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 beautifulsoup4==4.5.3
 coverage==4.3.4
 Django==1.10.5
+flake8==3.3.0
+isort==4.2.5
+mccabe==0.6.1
 olefile==0.44
 Pillow==4.0.0
+pycodestyle==2.3.1
+pyflakes==1.5.0
