--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.5.3
 coverage==4.3.4
 Django==1.10.5
+django-tz-detect==0.2.8
 flake8==3.3.0
 isort==4.2.5
 mccabe==0.6.1
@@ -9,3 +10,5 @@ Pillow==4.0.0
 psycopg2==2.7.1
 pycodestyle==2.3.1
 pyflakes==1.5.0
+pytz==2017.2
+six==1.10.0
